# gitfetch

./: Cargo.toml  LICENSE  READM.md  README.md  gitfetch.bash  gitfetch.fish  gitfetch.zsh  install.sh  update.sh
src/: checksum.rs  config.rs  git.rs  main.rs  main.rs.backup  security.rs  types.rs
src/commands/: checksum.rs  clone.rs  list.rs  misc.rs  mod.rs  search.rs
