[package]
name = "gitfetch"
version = "0.10.0"
edition = "2021"
authors = ["Your insufferable self"]
description = "A GitHub Package Manager from Hell (now with actual cryptographic verification)"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "gitfetch"
path = "src/main.rs"
